homeassistant/Ingress-zigbee.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: azure-acme-issuer
  name: zigbee
  namespace: homeassistant
spec:
  ingressClassName: haproxy
  rules:
    - host: zigbee.anderwerse.de
      http:
        paths:
          - backend:
              service:
                name: zigbee
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - zigbee.anderwerse.de
      secretName: zigbee-tls
